feat/Car-detail page